# f1-game-library-models

./: .license_report.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  reference.txt
.claude/: settings.local.json
.github/workflows/: publish.yml  pull_request.yml  test.yml
benches/: parse.rs
examples/: v2_monitor.rs
src/: client.rs  endian.rs  lib.rs  macros.rs  packet_id.rs  parse.rs  wheel_data.rs
src/client/: mod.rs
src/enums/: assists.rs  fia_flag.rs  lap.rs  mod.rs  nationality.rs  platform.rs  safety_car.rs  surface.rs  team.rs  telemetry_error.rs  track.rs  tyre.rs
src/packets/: car_damage.rs  car_setups.rs  car_status.rs  car_telemetry.rs  final_classification.rs  lap_data.rs  lap_positions.rs  lobby_info.rs  mod.rs  motion.rs  motion_ex.rs  participants.rs  session_history.rs  time_trial.rs  tyre_sets.rs
src/packets/event/: mod.rs  variants.rs
src/packets/session/: enums.rs  mod.rs
src/telemetry_data/: mod.rs  packet_header.rs
src/telemetry_data/car_damage_data/: brake_data.rs  car_data.rs  engine_wear.rs  mod.rs  packet.rs  tyre_data.rs  wing_damage.rs
src/telemetry_data/car_setup_data/: car_setup_data.rs  mod.rs  packet.rs
src/telemetry_data/car_status_data/: car_status_data.rs  driver_aids.rs  ers.rs  mod.rs  packet.rs  tyre_compounds.rs  vehicle_flags.rs
src/telemetry_data/car_telemetry_data/: car_telemetry.rs  mod.rs  packet.rs
src/telemetry_data/event_data/: alternate_speed_trap.rs  buttons.rs  chequered_flag.rs  collision.rs  drive_through_penalty_served.rs  drs_disabled.rs  drs_enabled.rs  event_type.rs  fastest_lap.rs  flash_back.rs  infringement_type.rs  lights_out.rs  macros.rs  mod.rs  overtake.rs  packet.rs  packet_internal.rs  penalty.rs  penalty_type.rs  race_winner.rs  red_flag.rs  retirement.rs  safety_car.rs  session_end.rs  session_start.rs  speed_trap.rs  start_lights.rs  stop_go_penalty_served.rs  team_mate_in_pits.rs
src/telemetry_data/final_classification_data/: final_classification_data.rs  mod.rs  packet.rs
src/telemetry_data/lap_data/: driver_status.rs  lap_data.rs  mod.rs  packet.rs  pit_status.rs  result_status.rs  sector.rs
src/telemetry_data/lap_positions_data/: mod.rs  packet.rs
src/telemetry_data/lobby_data/: lobby_info_data.rs  mod.rs  packet.rs  platform.rs  ready_status.rs
src/telemetry_data/motion_data/: car_motion_data.rs  mod.rs  packet.rs
src/utils/: mod.rs
tests/: v2_fixtures.rs
(+54 files in other folders)
