[package]
name         = "f1-game-library-models-25"
version      = "0.4.0"
edition      = "2024"
authors      = ["Ben Thornton <11bthornton@gmail.com>"]
description  = "Models associated with the F1 Video Game series for UDP Telemetry"
readme       = "README.md"
license-file = "LICENSE"
keywords     = ["gamedev"]
repository   = "https://github.com/11bthornton/f1-game-library-models"
homepage     = "https://github.com/11bthornton/f1-game-library-models"

[release]
allow-branch = ["main"]

[dependencies]
anyhow = "1.0.100"
num_enum = "0.7"
paste = "1"
tokio = { version = "1.45.1", optional = true, features = ["net"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = ["rt", "net", "macros"] }

[features]
default = ["client"]
client = ["dep:tokio"]